--- a/styles/styles.css
+++ b/styles/styles.css
@@ -217,6 +217,7 @@ section {
   margin-left: 0rem;
   margin-bottom: 0rem;
   transition: transform 1s ease-out;
+  filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
 
 /*#image:hover {
@@ -1215,7 +1216,7 @@ section {
 
   #image {
     background: transparent;
-    height: 42vh;
+    height: 52vh;
     max-width: fit-content;
         
   }
