--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,14 +22,14 @@
   --color-grey-4: #454e56;
   --color-grey-5: #1f201f;
   --color-grey-6: #12181b;
-  --color-blue-7: #fbff00;
+  --color-blue-7: #ff0000;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
 
 .light-mode {
   --color-primary: #000000;
-  --color-secondary: #fbff00;
+  --color-secondary: #ff0000;
   --color-white: #ffffff;
   --color-black: #ffffff;
   --color-grey0: #f8f8f8;
@@ -381,7 +381,7 @@ section {
 }
 
 .theme-btn:hover {
-  background-color: #fbff00;
+  background-color: #ff0000;
   scale: 0.8;
   filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
