--- a/styles/styles.css
+++ b/styles/styles.css
@@ -212,11 +212,11 @@ section {
 #image {
   background: transparent;
   width: 40vw;
-  height: 80vh;
+  height: 100vh;
   margin-left: 5rem;
   margin-bottom: 0rem;
   transition: transform 1s ease-out;
-  filter: drop-shadow(0px 10px 60px var(--color-secondary));
+  /* filter: drop-shadow(0px 10px 60px var(--color-secondary)); */
 }
 
 /*#image:hover {
@@ -1284,7 +1284,7 @@ section {
     width: 100vw;
     margin-left: -3rem;
     margin-right: 0;
-    margin-bottom: -2rem; 
+    margin-bottom: -8rem; 
 
   }
 
@@ -1586,8 +1586,9 @@ section {
   #main-image {
     margin-left: 5rem;
     margin-top: 3rem;
-    width: 25rem;
-    height: 25rem;
+    width: 35rem;
+    height: 35rem;
+    margin-bottom: -41rem;
   }
 
 
@@ -1686,8 +1687,7 @@ section {
     height: 20rem;
   }
 
-  
-
+ 
   .textHead {
     margin-right: 0rem;
     margin-left: 0rem;
