--- a/styles/styles.css
+++ b/styles/styles.css
@@ -657,7 +657,8 @@ section {
 
 .portfolios .portfolio-item img {
   width: 100%;
-  height: 7rem;
+  height: auto;
+  /*height: 7rem;*/
   object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -694,6 +695,7 @@ section {
   justify-content: center;
   align-items: center;
 }
+
 .portfolios .portfolio-item .hover-items .icons .icon {
   background-color: var(--color-primary);
   border-radius: 50%;
@@ -824,7 +826,7 @@ section {
 
 .blogs .blog img {
   width: 100%;
-  height: 7rem;
+  height: auto;
   object-fit: cover;
   border-top-left-radius: 10px;  
   border-top-right-radius: 10px;  
