--- a/styles/styles.css
+++ b/styles/styles.css
@@ -613,7 +613,7 @@ section {
 
 /* Zoom effect */
 .timeline .timeline-item img:hover {
-  transform: scale(1.8);
+  transform: scale(1.2);
   -webkit-animation: flash 2s;
 	animation: flash 2s;
 }
@@ -820,8 +820,11 @@ section {
 }
 
 .blogs .blog:hover img {
-  transform: scale(1.2);
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
+  background: linear-gradient(0deg,  
+    transparent 20%, 
+    var(--color-secondary));
+  transform: rotate(15deg);
+  transition: all 0.5s ease;
 }
 
 .blogs .blog img {
