--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,14 +22,14 @@
   --color-grey-4: #454e56;
   --color-grey-5: #1f201f;
   --color-grey-6: #12181b;
-  --color-blue-7: #423a90;
+  --color-blue-7: #7a424b;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
 
 .light-mode {
   --color-primary: #00071b;
-  --color-secondary: #423a90;
+  --color-secondary: #7a424b;
   --color-white: #ffffff;
   --color-black: #ffffff;
   --color-grey0: #f8f8f8;
@@ -375,7 +375,7 @@ section {
 }
 
 .theme-btn:hover {
-  background-color: #423a90;
+  background-color: #7a424b;
   scale: 0.8;
   filter: drop-shadow(0px 10px 60px var(--color-secondary));
   transform: rotate(20deg);
