--- a/styles/styles.css
+++ b/styles/styles.css
@@ -211,8 +211,9 @@ section {
 
 #image {
   background: transparent;
-  width: 50vw;
-  height: 90vh;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
   margin-left: 5rem;
   margin-bottom: 0rem;
   transition: transform 1s ease-out;
@@ -600,7 +601,7 @@ section {
 /* EDU IMAGE KOKO JA EFEKTIT MOUSE-OVER */
 .timeline .timeline-item img {
   width: 100%;
-  height: 33%;
+  height: auto;
   object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
