--- a/styles/styles.css
+++ b/styles/styles.css
@@ -210,13 +210,13 @@ section {
 
 
 #image {
-  background: transparent;
-  width: 100%;
-  height: auto;
+  display: block; /* Poistaa ylimääräisen tilan kuvan alta */
+  max-width: 100%; /* Estää kuvaa kasvamasta liian suureksi */
+  height: auto; 
   object-fit: cover;
-  margin-left: 5rem;
-  margin-bottom: 0rem;
   transition: transform 1s ease-out;
+  /* Käytä marginaaleja maltilla */
+  margin: 0 auto; /* Keskittää kuvan oletuksena */
   /* filter: drop-shadow(0px 10px 60px var(--color-secondary)); */
 }
 
