--- a/styles/styles.css
+++ b/styles/styles.css
@@ -569,18 +569,28 @@ section {
   text-transform: uppercase;
   font-weight: 500;
 }
+
 .timeline .timeline-item h5 {
   padding: 0 0;
   text-transform: uppercase;
-  font-size:small;
+  font-size: small; /* Vaihdettu x-small hieman suuremmaksi perusnäkymään */
   font-weight: 500;
-  height: 4rem;
+  min-height: 4rem; /* Käytä min-height, jotta teksti mahtuu, vaikka se rivittyisi */
+  height: auto; /* Antaa korkeuden kasvaa tarvittaessa */
 }
+
+/* suurille näytöille (esim. > 1200px) */
+@media screen and (min-width: 1200px) {
+  .timeline .timeline-item h5 {
+    font-size: 0.7rem; /* Kasvata fonttia lukemisen helpottamiseksi */
+    min-height: 3rem; /* Säädä korkeus uudelleen uuden fonttikoon mukaan */
+  }
+}
+
 .timeline .timeline-item h5 span {
   color: var(--color-grey-2);
   font-weight: 400;
   font-size:smaller;
-  
 }
 
 .timeline .timeline-item p {
@@ -590,7 +600,6 @@ section {
   font-size: x-small;
   line-height: 1.1rem;
 }
-
 
 .timeline .timeline-item {
   position: relative;
