--- a/styles/styles.css
+++ b/styles/styles.css
@@ -527,25 +527,26 @@ section {
 /*Timeline*/
 .timeline {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  /* Käytä auto-fit ja minmax dynaamiseen asetteluun */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
   grid-gap: 2rem; 
 }
 
 .timeline, h5 {
-  height: 4.5em; 
+  min-height: 4.5em; 
+  height: auto; /* Antaa korkeuden kasvaa tarvittaessa */
 }
 
 
 .timeline .timeline-item {
   position: relative;
-  height: 15rem;
   padding-left: 3rem;
   padding-bottom: 1rem;
 }
 
 .timeline .timeline-item .tl-icon {
   position: absolute;
-  left: -27px;
+  left: -1rem;
   top: 0;
   background-color: var(--color-secondary);
   width: 50px;
@@ -560,24 +561,12 @@ section {
   font-size: 1rem;
 }
 
-/*
-.timeline .timeline-item .tl-duration {
-  padding: 0.2rem 0.6rem;
-  background-color: var(--color-grey-5);
-  border-radius: 15px;
-  display: inline-block;
-  font-size: 0.8rem;
-  text-transform: uppercase;
-  font-weight: 500;
-}*/
-
 .timeline .timeline-item h5 {
   padding: 0 0;
   text-transform: uppercase;
-  font-size: small; /* Vaihdettu x-small hieman suuremmaksi perusnäkymään */
-  font-weight: 500;
-  min-height: 4rem; /* Käytä min-height, jotta teksti mahtuu, vaikka se rivittyisi */
-  height: auto; /* Antaa korkeuden kasvaa tarvittaessa */
+  font-size: small; 
+  min-height: 4rem; 
+  height: auto; 
 }
 
 /* suurille näytöille (esim. > 1200px) */
@@ -596,7 +585,6 @@ section {
 
 .timeline .timeline-item p {
   color: var(--color-grey-2);
-  height: 7rem;
   padding: 0.5em;
   font-size: x-small;
   line-height: 1.1rem;
@@ -605,7 +593,48 @@ section {
 .timeline .timeline-item {
   position: relative;
   border-radius: 10px;
+
 }
+
+@media screen and (max-width: 600px) {
+  .timeline {
+    /* Yhden sarakkeen asettelu mobiilissa */
+    grid-template-columns: 1fr; 
+  }
+}
+
+/* iPad Air pystysuunnassa */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  .timeline {
+    /* Esimerkiksi 3 saraketta pystynäkymässä */
+    grid-template-columns: repeat(3, 1fr); 
+  }
+}
+
+/* iPad Air vaakasuunnassa */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  .timeline {
+    /* Esimerkiksi 4 saraketta vaakanäkymässä */
+    grid-template-columns: repeat(4, 1fr); 
+  }
+}
+
+/* iPad Pro -kohtainen korjaus (tyypillisesti 1024px pystysuunnassa) */
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) {
+  .timeline {
+    /* Pakota 2 saraketta */
+    grid-template-columns: repeat(2, 1fr); 
+  }
+}
+
+/* Yleinen media-kysely tiettyyn breakpointtiin, jos haluat kohdistaa kaikki laitteet tällä leveydellä */
+@media screen and (max-width: 1200px) and (min-width: 768px) {
+  .timeline {
+    /* Voit käyttää tätä yleisempää sääntöä, joka kattaa monet tabletit */
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 
 /* EDU IMAGE KOKO JA EFEKTIT MOUSE-OVER */
 .timeline .timeline-item img {
@@ -1368,11 +1397,7 @@ section {
  
   
 
-  .timeline {
-    grid-template-columns: repeat(1, 1fr);
-    padding-bottom: 6rem;
-  }
-
+  
  
   .container {
     padding: 2rem 2.5rem !important;
@@ -1464,13 +1489,6 @@ section {
   }
 
   
-  
-  .timeline {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 2rem;
-    padding-bottom: 3rem;
-  }
   
   .right-header .name {
     text-align: center;
@@ -1871,9 +1889,6 @@ section {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .timeline {
-    grid-template-columns: repeat(1, 1fr);
-  }
 
   .main-title h2 {
     font-size: 2.5rem;
