--- a/styles/styles.css
+++ b/styles/styles.css
@@ -673,7 +673,6 @@ section {
 	}
 }
 
-
 .port-text {
   padding: 2rem 0;
   text-align: center;
@@ -772,7 +771,8 @@ section {
 
 .blogs {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  /* Luo automaattisesti sarakkeita, joiden minimileveys on esim. 300px */
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 1rem;
   margin-top: 2rem;
 }
@@ -782,7 +782,7 @@ section {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   position: relative;
-  object-fit: fill;
+  object-fit: cover;
   border-width: 0.5rem;
   /* box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1); */
   transition: all 0.4s ease-in-out;
