--- a/styles/styles.css
+++ b/styles/styles.css
@@ -680,9 +680,11 @@ section {
 
 .portfolios {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-gap: 1rem;
-  margin-top: 2rem;
+  /* Kasvatetaan minimileveyttä 300px:iin, jotta kortit eivät ole liian kapeita widescreenillä */
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 2rem; /* Hieman enemmän ilmaa väliin */
+  margin: 2rem auto 0 auto; /* Keskittää osion */
+  max-width: 1400px; /* Rajoittaa leveyden ultra-wide näytöillä */
 }
 
 
@@ -771,10 +773,11 @@ section {
 
 .blogs {
   display: grid;
-  /* Luo automaattisesti sarakkeita, joiden minimileveys on esim. 300px */
+  /* Kasvatetaan minimileveyttä 300px:iin, jotta kortit eivät ole liian kapeita widescreenillä */
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 1rem;
-  margin-top: 2rem;
+  grid-gap: 2rem; /* Hieman enemmän ilmaa väliin */
+  margin: 2rem auto 0 auto; /* Keskittää osion */
+  max-width: 1400px; /* Rajoittaa leveyden ultra-wide näytöillä */
 }
 
 
@@ -1351,8 +1354,6 @@ section {
     
   }
 
-  
-
   .right-header .name {
     font-size: 2.5rem !important;
     text-align: center;
@@ -1394,10 +1395,6 @@ section {
     padding-left: 0;
   }
 
- 
-  
-
-  
  
   .container {
     padding: 2rem 2.5rem !important;
